--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
   <header>
     <h1>Fortune Mate</h1>
-    <p>算命 App 專用 Help & Support</p>
+    <p>Fortune Mate Help & Support</p>
   </header>
 
   <main>
